# homework14

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: schemas.py
src/auth_files/: auth_procedures.py  auth_settings.py
src/config/: config.py
src/db/: db.py  generate_fake_data.py  models.py  my_contacts_for_users_db.sqlite
src/docs/: conf.py
src/docs/_build/doctrees/: environment.pickle  index.doctree
src/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
src/docs/_build/html/_sources/: index.rst.txt
src/docs/_build/html/_static/: documentation_options.js
src/repository/: contacts.py  users.py
src/routes/: auth.py  jwt.py  router_contacts.py  router_endpoints.py  routes.py
src/services/: email_token.py  send_email.py
src/services/templates/: email.html
src/tests/: my_contacts_for_users_db_test.sqlite  test_for_contact_and_user.py  tests_contacts.py  tests_schemas.py
