[tool.poetry]
name = "restapi project"
version = "1.7.1"
description = "RestAPI project documentation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.1"
pytest-mock = "^3.12.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
httpx = "^0.27.0"
pytest = "^8.0.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
